<resources>
    <string name="app_name">守·璋</string>
    <string name="TEL">手机号:</string>
    <string name="regisNametextview">昵称:</string>
    <string name="password">密码:</string>
    <string name="regisPsdtextView2">确认密码:</string>
    <string name="Imgcode1">请输入验证码:</string>
    <string name="Imgcode2">点击图片切换，不区分大小写</string>
    <string name="Register">注册</string>
    <string name="Reset">重置</string>
    <string name="Login">登录</string>
    <string name="Submit">提交</string>
    <string name="toLogin"><![CDATA[>>>已有账号，直接登录]]></string>
    <string name="toRegister"><![CDATA[>>>没有账号，去注册]]></string>
    <string name="cnOldName1">现昵称:</string>
    <string name="cnNewName">新昵称:</string>
    <string name="cpNewPsdtextView1">新密码:</string>
    <string name="cpNewPsdtextView2">确认新密码:</string>
    <string name="edDatatextView">时间范围</string>
    <string name="edDestextView">记账数据将以附件形式发送到您的邮箱</string>
    <string name="reigsCodeDes">密码长度在6到10位之间，由数字和字母组成，区分大小写</string>
    <string name="meText_newname">修改昵称</string>
    <string name="meText_newpsd">修改密码</string>
    <string name="meText_export">导出数据</string>
    <string name="meText_delete">删除全部数据</string>
    <string name="meText_feedback">意见反馈</string>
    <string name="meText_hi">Hi：</string>
    <string name="fbTextDes">意见反馈</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="addType">消费类型:</string>
    <string name="addTime">时间:</string>
    <string name="addMoney">金额:</string>
    <string name="addRemark">备注:</string>
    <string name="Back">返回</string>
</resources>