<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regisTeltextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/TEL"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/regisTeleditTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regisNametextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/regisNametextview"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/regisNameeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regisPsdtextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/regisPsdeditTextTextPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/reigsCodeDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reigsCodeDes"
        android:gravity="right"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regisPsdtextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/regisPsdtextView2"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/regisPsdeditTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regisImgcodetextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Imgcode1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/regisImgcodeeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/regisImgimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="regis_btn_op" />

        <TextView
            android:id="@+id/regisImgcodetextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/Imgcode2"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/regisRegisbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Register"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:onClick="regis_btn_op"/>

        <Button
            android:id="@+id/regisResetbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reset"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="40dp"
            android:onClick="regis_btn_op"/>
    </LinearLayout>

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/toLogin"
        android:textSize="17sp"
        android:onClick="regis_btn_op"/>
</LinearLayout>