<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExportData"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/edDatatextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edDatatextView"
            android:textSize="20sp"
            android:textColor="#8B7500"
            android:textStyle="bold"
            android:gravity="center"/>

        <Spinner
            android:id = "@+id/spinner_slot"
            android:layout_width = "wrap_content"
            android:layout_height ="wrap_content" >
        </Spinner >
    </LinearLayout>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/edDestextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edDestextView"
        android:layout_marginTop="3dp"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/edSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Submit"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:onClick="ed_btn_op"/>

        <Button
            android:id="@+id/edReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reset"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="40dp"
            android:onClick="ed_btn_op"/>
    </LinearLayout>

    <Button
        android:id="@+id/edBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:onClick="ed_btn_op"/>

</LinearLayout>