<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/logTeltextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/TEL"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logTeleditTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
        android:id="@+id/logPsdtextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/logPsdeditTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/logImgcodetextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Imgcode1"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/logImgcodeeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/logImgimageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="log_btn_op" />

        <TextView
            android:id="@+id/logImgcodetextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/Imgcode2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/logLoginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Login"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:onClick="log_btn_op"/>

        <Button
            android:id="@+id/logResetbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reset"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="40dp"
            android:onClick="log_btn_op"/>
    </LinearLayout>

    <TextView
        android:id="@+id/toRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toRegister"
        android:gravity="center"
        android:textSize="15sp"
        android:onClick="log_btn_op"/>

</LinearLayout>