<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePsd"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cpNewPsdtextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cpNewPsdtextView1"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cpNewPsd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cpNewPsdtextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cpNewPsdtextView2"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cpNewPsd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cpSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Submit"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/cpReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reset"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="40dp"/>
    </LinearLayout>
</LinearLayout>